Fixed coursename's low text contrast on light mode

--- a/eva_dark_mode.user.css
+++ b/eva_dark_mode.user.css
@@ -3,7 +3,7 @@
 @namespace      https://github.com/ScyllarusDactyl/EVA-Dark-Mode
 @homepageURL    https://github.com/ScyllarusDactyl/EVA-Dark-Mode
 @updateURL      https://raw.githubusercontent.com/ScyllarusDactyl/EVA-Dark-Mode/master/eva_dark_mode.user.css
-@version        2.3.4
+@version        2.3.5
 @license        LGPL-3.0-or-later
 @description    Modo oscuro para eva.unapec.edu.do
 @author         ScyllarusDactyl
@@ -2092,7 +2092,7 @@
 
         .coursename_semi a,
         .coursename_pre a {
-            color : gray;
+            color : if(@theme =dark, gray, #444);
             filter: if(@theme =dark, brightness(200%), brightness(75%));
         }
     }
